--- a/oblig2.tex
+++ b/oblig2.tex
@@ -11,6 +11,32 @@
 \usepackage{listings}
 \usepackage{xcolor}
 
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{1,1,1}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+
+\lstset{style=mystyle}
+
 \title{Mandatory Assignment 2\\Fys4130 - Statistical Mechanics}
 \author{Daniel Johan Aarstein}
 
@@ -348,5 +374,84 @@ in total gives us
 
 "Is this correct?" - Daniel, 24 år \\
 "Yes."  - João, 21 anos
+
+\newpage
+\section*{Exercise 2}
+
+\textbf{a)} \\
+\\
+\noindent All code and relevant txt-files can be found in the following
+Github-repository; \url{https://github.com/danaars/FYS4130}. \\
+\\
+\textbf{b)} \\
+\\
+For the one-dimensional case with periodic boundary conditions the following
+correlations were computed by using
+\begin{align*}
+    C(r) = \expval{m_0^*m_r} - \expval{m_0^*}\expval{m_r}
+\end{align*}
+
+The following results are obtained with 100000 Monte Carlo Cycles.\\
+\includegraphics[width = \textwidth]{hTcorr.png} \\
+\includegraphics[width = \textwidth]{lTcorr.png}
+\\
+Note that the correlation is high 
+\\ \\
+\textbf{c)} \\
+\\
+\noindent For this part, two results were obtained. The only difference in the
+calculation (i.e. code) is illustrated in the following lines of pseudo code
+
+\begin{lstlisting}[language=C++]
+if (spin[x][y] == 0){
+    // Case A
+    spin[x][y] = 1;
+    // or
+    // Case B
+    spin[x][y] = (r < 0.5) ? 1:2;
+}
+\end{lstlisting}
+
+Case A simply changes the spin at location $(x, y)$ from $0$ to $1$ with
+probability $1$. Case B is perhaps more realistic for a physical process, in
+that the spin at location $(x, y)$ changes to one of the other possible spins, each with probability
+$0.5$. \\
+For $L=16$ the real part of the average magnetization per site is given by the following
+plots. \\
+Case A:\\
+\includegraphics[width = \textwidth]{ram.png}\\
+Case B: \\
+\includegraphics[width = \textwidth]{r_ram.png}\\
+
+Note that for case A (the less random one) the real part of the average
+magnetization is close to zero untill the temperature reaches about $T = 0.6$.
+This, however, is not the case in case B. Here the real part of the average
+magnetization fluctuates more or less randomly irregardless of temperature.\\
+For the rest of the exercise, calculations have been carried out with the case
+A syntax.\\
+\\
+\textbf{d)} \\
+\\
+For $L = 16$ the average of the absolute magnetization squared is as follows \\
+\includegraphics[width = \textwidth]{ams.png} \\
+\\
+For $T/J = 0$, $\expval{\abs{m}^2} = 1$, for $T/J \to \infty$,
+$\expval{\abs{m}^2} = 0$. \\
+\\
+\textbf{e)} \\
+\\
+\textbf{f)} \\
+\\
+For systems of sizes $L = {8, 16, 32}$ the following results of $\Gamma$ were
+obtained\\
+\includegraphics[width = \textwidth]{gamma.png}\\
+zooming in we have that \\
+\includegraphics[width = \textwidth]{gamma_zoom.png}\\
+The graphs are 100 calculations for $T/J$ from $0$ to $2$. That gives $\Delta
+T/J = \frac{2}{100} = 0.02$ The graphs cross at a distance smaller than $\Delta
+T/J$ from the theoretical $T_c/J$. For a finer resolution it then might be the
+case that the graphs cross at exactly $T_c/J$, as they should in theory. \\
+If the graphs dont cross in a single point something must be wrong with our
+assumption that the function $\Gamma$ is a function of only $t$ and $L^{-1}$.
 
 \end{document}
